// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi 1`] = `
"// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
import { ComponentWrapper, ElementWrapper } from '../../../../../lib/core/dom';
import ChildWrapper from './simple';
export default class DummyWrapper extends ComponentWrapper {
  findElement() {
    return this.find('.awsui-element');
  }
  findElements() {
    return this.findAll('.awsui-element');
  }
  findChildren() {
    return this.findAll('.awsui-element').map(element => new ChildWrapper(element.getElement()));
  }
}"
`;

exports[`simple 1`] = `
"// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
import { ComponentWrapper, ElementWrapper } from '../../../../../lib/core/dom';
export default class DummyWrapper extends ComponentWrapper {
  findElement() {
    return this.find('.awsui-element')!;
  }
}"
`;

exports[`strip-dom 1`] = `
"// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
/* eslint-env browser */
import { Simulate } from 'react-dom/test-utils';
import { ComponentWrapper, ElementWrapper, usesDom } from '../../../../../lib/core/dom';
export default class DummyWrapper extends ComponentWrapper {
  findOptionalElement() {
    return this.find('.awsui-optional-element');
  }
  findRequiredElement() {
    return this.find('.awsui-required-element')!;
  }
}"
`;

exports[`strip-imports 1`] = `
"// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
import { ComponentWrapper, usesDom } from '../../../../../lib/core/dom';
import { KeyCode } from '../../../../../lib/core/utils';
import ChildWrapper from './simple';
export default class DummyWrapper extends ComponentWrapper {
  findElement() {
    return new ChildWrapper(this.find('.awsui-child')!.getElement());
  }
  findSomething() {
    return KeyCode.enter;
  }
}"
`;
